alignment fixed

--- a/style.css
+++ b/style.css
@@ -5,19 +5,16 @@ body {
 }
 
 .wrapper {
-    display: flex;
-    width: 100%;
+  display: flex;
+  width: 100%;
+  height: 100vh;
 }
 
 #sidebar {
-  width: 80px;
+  width: 96px;
   max-width: 250px;
   min-height: 100vh;
   background-color: #181818;
-  /*position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 999;*/
   margin-right: 40px;
 }
 
@@ -27,11 +24,10 @@ body {
 
 #logo {
   text-decoration: none;
-  font-size: 16px;
+  font-size: 24px;
 }
 
 ul {
-
   text-align: center;
   font-size: 1.5em;
   margin-right:  0;
@@ -40,16 +36,18 @@ ul {
 
 #sidebar li  {
  list-style: none;
+ font-size: 1.5em;
 }
 
 .sidebar-header{
    text-align: center;
+   margin-bottom: 40px;
 }
 
 a {
   text-decoration: none;
   color: #79F7DA;
-  font-size: 24px;
+  font-size: 32px;
   opacity: 0.9;
 }
 
@@ -62,7 +60,6 @@ h1 {
   color: #252525;
   font-family: 'Poppins', sans-serif;
 }
-
 
 h2 {
   color: #BF808C;
@@ -78,18 +75,12 @@ span {
   border-radius: 50%;
 }
 
-.logo {
- font-size: 16px;
-}
+
 .logo-img {
-  width: 50px;
-  height: 50px;
-  }
+  width: 56px;
+  height: 56px;
 }
 
-.deco {
-  color: red !important;
-}
 
 .home-btn {
   color: #79F7DA;
@@ -104,8 +95,17 @@ span {
 
 .social-icons {
   position: fixed;
-  bottom: 0px;
+  bottom: 50px;
   margin-left: 20px;
+}
+
+.social-icons ul{
+ font-size: 1.5em;
+}
+
+.social-icons li {
+  padding-top: 10px;
+  font-size: 1.5em;
 }
 
 .avatar {
@@ -115,12 +115,14 @@ span {
 }
 
 .home-page {
-  padding: 150px;
+  height: 100vh;
 }
 
 .home-page-content {
-  margin-right: 40px;
+  margin-left: 150px;
+  margin-right: 100px;
 }
+
 /*@media (max-width: 720px) {
   .container {
     width: 500px;
